--- a/stratio-docs/en/modules/ROOT/pages/installation.adoc
+++ b/stratio-docs/en/modules/ROOT/pages/installation.adoc
@@ -504,6 +504,108 @@ spec:
     az: eu-west-1c
 ----
 
+==== AWS unmanaged
+
+In this example you can see the following particularities:
+
+* Cluster on AWS with umanaged _control-plane_.
+* Kubernetes version 1.26.x.
+* Use of ECR as _Docker registry_ (no credentials needed).
+* Use of VPC and custom subnets (previously created). This section is optional.
+* Definition of a default _StorageClass_. This section is optional.
+* Groups of _worker_ nodes with multiple scenarios:
+** Several instance types.
+** With SSH key.
+** With K8s labels.
+** With auto-scaling ranges.
+** In a fixed zone.
+** With customizations on disk.
+** With spot-type instances.
+** Distribution cases in AZs: balanced and unbalanced.
+
+[source,yaml]
+----
+apiVersion: installer.stratio.com/v1beta1
+kind: KeosCluster
+metadata:
+  name: aws-prod
+spec:
+  infra_provider: aws
+  credentials:
+  aws:
+    region: eu-west-1
+    access_key: AKIAT4..
+    account_id: '3683675..'
+    secret_key: wq3/Vsc..
+  github_token: github_pat_11APW..
+  k8s_version: v1.26.7
+  region: eu-west-1
+  external_domain: domain.ext
+  networks:
+    vpc_id: vpc-02698..
+    subnets:
+      - subnet_id: subnet-0416d..
+      - subnet_id: subnet-0b2f8..
+      - subnet_id: subnet-0df75..
+      - subnet_id: subnet-88789..
+      - subnet_id: subnet-89785..
+      - subnet_id: subnet-84281..
+    pods_subnets:
+      - subnet_id: subnet-0416d..
+      - subnet_id: subnet-0b2f8..
+      - subnet_id: subnet-0df75..
+    pods_cidr: 100.64.0.0/16
+  docker_registries:
+  - url: AABBCC.dkr.ecr.eu-west-1.amazonaws.com/keos
+    auth_required: false
+    type: ecr
+    keos_registry: true
+  storageclass:
+  parameters:
+    type: gp3
+    fsType: ext4
+    encrypted: "true"
+    labels: "owner=stratio"
+  keos:
+  flavour: production
+  version: 1.0.2
+  control_plane:
+  managed: false
+  name: aws-prod-cp
+  size: m6i.xlarge
+  node_image: ami-0de933c15c9b49fb5
+  root_volume:
+    size: 50
+    type: gp3
+  worker_nodes:
+  - name: aws-prod-xlarge
+    quantity: 6
+    max_size: 18
+    min_size: 6
+    size: m6i.xlarge
+    node_image: ami-0de933c15c9b49fb5
+    labels:
+    disktype: standard
+    root_volume:
+    size: 50
+    type: gp3
+    encrypted: true
+    ssh_key: stg-key
+  - name: aws-prod-medium-spot
+    quantity: 4
+    node_image: ami-0de933c15c9b49fb5
+    zone_distribution: unbalanced
+    size: t3.medium
+    spot: true
+    labels:
+    disktype: standard
+  - name: aws-prod-medium-az
+    quantity: 3
+    node_image: ami-0de933c15c9b49fb5
+    size: t3.medium
+    az: eu-west-1c
+----
+
 ==== GCP
 
 In this example you can see the following particularities:
