--- a/stratio-docs/en/modules/ROOT/pages/architecture.adoc
+++ b/stratio-docs/en/modules/ROOT/pages/architecture.adoc
@@ -65,7 +65,7 @@ In a *default deployment*, the following objects are created in each cloud provi
 
 * VMs for _workers_ (according to cluster descriptor and auto-scaling).
 ** 1 EBS volume for each persistent volume.
-* 1 network type load balancer for the exposure of load balancer type _Services_.
+* 1 load balancer type _Classic_ for the exposure of _Services_ type _Load Balancer_.
 ** 1 listener per port for each service.
 
 === GCP
